--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@mui/icons-material": "^7.2.0",
     "@mui/material": "^7.2.0",
     "@mui/x-data-grid": "^8.7.0",
+    "date-fns": "^4.1.0",
     "firebase": "^11.10.0",
     "googleapis": "^150.0.1",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
+    "lucide-react": "^0.536.0",
     "react": "^19.1.0",
     "react-color": "^2.19.3",
     "react-dom": "^19.1.0",
