Add work order toggle switches and update styling to black borders
- Added toggle switches to enable/disable printing for each furniture group in work order dialog
- Updated work order generation logic to respect toggle settings
- Changed all borders and table styling from blue (#274290) to black (#000000)
- Enhanced work order dialog UI with print enable/disable controls
- Improved work order generation to skip disabled furniture groups

--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
+    "@cloudinary/react": "^1.14.3",
+    "@cloudinary/url-gen": "^1.22.0",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
@@ -17,6 +19,7 @@
     "@mui/icons-material": "^7.2.0",
     "@mui/material": "^7.2.0",
     "@mui/x-data-grid": "^8.7.0",
+    "crypto-js": "^4.2.0",
     "date-fns": "^4.1.0",
     "firebase": "^11.10.0",
     "googleapis": "^150.0.1",
