--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "date-fns": "^4.1.0",
     "firebase": "^11.10.0",
     "googleapis": "^150.0.1",
+    "html2canvas": "^1.4.1",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.536.0",
