--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
+    "jszip": "^3.10.1",
     "lucide-react": "^0.536.0",
     "react": "^19.1.0",
     "react-color": "^2.19.3",
